www/css/styles.css
@charset "UTF-8";

@-webkit-keyframes show {
  from { stroke-dashoffset: 500; }
  to { stroke-dashoffset: 400; }
}

@keyframes show {
  from { stroke-dashoffset: 500; }
  to { stroke-dashoffset: 400; }
}

a {
  outline: none;
  color: #21759b;
}

body {
    height:100%;
    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, sans-serif;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
    overflow-y: hidden;
}

.amenity_description {
    font-size: 12px;
}

.amenity_name {
    font-size: 13px;
    font-weight:bold;
}

#arrow_left {
    float: left;
}

#arrow_right {
    float: right;
}

.big_button {
    border: 2px solid #222;
    border-radius: 10px;
    font-size: 2em;
    height: 2em;
    width: 100%;
}

.big_textbox {
    height: 2em;
    width: 90%;
}

#breadcrumbs_div {
    color: white;
    float: left;
    margin-left: 5px;
    max-height: 30px;
    overflow: hidden;
}

.breadcrumb_div {
    float: left;
    margin-top: 5px;
}

.breadcrumb_element_div {
    color: white;
    float: left;
    margin-left: 5px;
    margin-top: 5px;
    max-height: 20px;
    max-width: 200px;
    overflow-y: hidden;
    text-overflow: ellipsis;
}

.button_image {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50px;
}

.button_group_left_div {
    float: left;
    min-height: 50px;
    width: 50%;
}

.button_group_right_div {
    float: right;
    min-height: 50px;
    width: 50%;
}

#buttons_div {
    background-color: rgb(0,0,0);
    bottom: 0;
    height: 50px;
    margin-top: -50px;
    position: fixed;
    vertical-align: middle;
    width: 100%
}

.captcha {
    border: 1px solid #222;
    border-radius: 10px;
    height: 108px;
    margin: 10px;
}

#captcha_answer {
    width: 90px;
}

.captcha_check {
    height: 30px;
    width: 30px;
}

.captcha_check_div {
  height: 42px;
  width: 240px ;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
}

#captcha_question_img {
    border: 1px solid #fff;
    border-radius: 12px;
    margin-left: 8px;
}

.captcha_question_div {
    margin-top: -70px;
    width: 100%;
}

#captcha_question_text {
    margin-left: auto;
    margin-right: auto;
    font-size: medium;
    width: 260px;    
}

.captcha_table {
    border: "0";
    height: "100px";
    width: "100%";
}

#center_div {
    height: 100%;
    width: 100%;
}

.comments {
    font-size: 12px;
    margin-left: 4px;
}

.comments_header {
    font-size: 13px;
    font-weight: bold;
}

.comment_meta_info {
    font-style: italic;
}

#destination_download {
  stroke:#000;
  fill: #000;
}

#destination_downloaded {
  stroke:#00bbe0;
  fill: #00bbe0;
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

#destination_downloading {
  stroke:#00bbe0;
  fill: #00bbe0;
}

#destination_downloading .download_outer_circle {
  stroke-dashoffset: 0;
  -webkit-animation: show 2s;
  -webkit-animation-iteration-count: infinite;
  animation: show 2s;
  animation-iteration-count: infinite;
}

.destination_list_element {
    margin-top: 5px;
}

.destination_list_location {
    font-size: 10px;
    font-weight: normal;
}

.destination_list_offline {
    float: left;
    margin-top: 4px;
    margin-bottom: 4px;
    width: 100%;
}

.destination_list_name {
    
}

.destination_list_name_offline {
    float: left;
}

.destination_list_name_offline_delete {
    float: right;
    font-size: 20px;
}

#destination_search_results {
    margin-bottom: 140px;
    width:100%;
}

.download_icon {
    float: right;
    margin-top: -35px;
    width: 38px;
}

.download_outer_circle {
  fill: transparent;
  stroke-width: 2;
  stroke-dasharray: 500;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.edit_field {
    margin-bottom: 8px;
}

#filter_hidden_items {
    color: rgb(68,68,68);
    font-size: 10px;
}

#help_comment {
    height: 30px;
    position: absolute;
    visibility: hidden;
    width: 100%;
    z-index: 99999;
}

#help_comment_inner {
    background-color: rgba(255,255,255,0.8);
    border-radius: 5px;
    margin: auto;
    text-align: center;
    width: 90%;
}

.loading_full_screen {
    background-color: rgba(24,24,24,0.4);
    position: fixed;
    height: 100%;
    top: 0px;
    width: 100%;
}

.loading_screen_center {
    background-color: white;
    border-radius: 25px;
    height: 150px;
    width: 150px;
}

.loading_screen_spinner {
    margin-left: 27px;
    margin-top: 27px;
}

#logo_image {
    float: left;
    margin-right: 8px;
}

.medium_button {
    font-size: 1.5em;
    height: 1.5em;
    width: 45%;
}

#menu_div {
    float: right;
    margin-right: 5px;
}

.menu_item {
    height: 20px;
    margin: 8px;
    width: 100%;
}

#menu_popup {
    background-color: white;
    border-radius: 5px;
    box-shadow: 0 1px 7px rgba(0,0,0,.4);
    height: 305px;
    position: absolute;
    top: 30px;
    visibility: hidden;
    width: 200px;
    z-index: 9999;
}

.page_header {
    font-weight: bold;
}

#photo_bullets {
    color: #636363;
    font-size: 20px;
    height: 30px;
    text-align: center;
}

#photo_bullet_selected {
    color: white;
}

#photo_nav_bar {
    height: 28px;
    margin-left: 8px;
    margin-right: 8px;
}

.red_text {
    color: red;
}

.route_list_rating {
    width: auto;
}

.route_list_type {
    width: auto;
}

.route_tick_colored {
    background-color: #E7E3E3;
    margin-bottom: 3px;
    margin-top: 3px;
    min-height: 40px;
    width: 100%;
}

.route_tick {
    margin-bottom: 3px;
    margin-top: 3px;
    min-height: 40px;
    width: 100%;
}

.route_tick_comment {
    font-size: 12px;
}

.route_tick_date {
    font-size: 12px;
}

.route_tick_name {
    float: left;
    min-height: 40px;
    width: 60%;
}

.route_tick_type {
    float: right;
    height: 40px;
    text-align: right;
    width: 40%;
}

#search_results {
    margin-bottom: 140px;
    width:100%;
}

#search_screen_inner {

}

.screen {
    height: 100%;
    position: absolute;
    top: 30px;
    visibility: hidden;
    width: 100%;
}

#screen_info_title {
    font-weight: bold;
    margin: 8px;
}

#screen_info_title_second_line {
    font-size: 13px;
    font-weight: normal;
}

#screen_info_inner::-webkit-scrollbar {
    width: 0 !important;
}

.screen_inner {
    height: 100%;
    margin-left: 8px;
    margin-right: 8px;
    margin-top: 8px;
    margin-bottom: 200px;
    overflow: auto;
}

#screen_map {
    overflow: hidden;
}

.screen_message {
    margin: 10px;
    text-align: center;
}

#screen_photo {
    background: #242424;
    overflow-x: hidden;
    overflow-y: hidden;
}

.search_box_div {
    padding-left: 8px;
    padding-right: 8px;
    padding-top: 8px;
}

.search_filter {
    padding-left: 8px;
    padding-right: 16px;
    padding-top: 8px;
}

.search_text {
    height: 2em;
    width: 100%;
}

#target_overlay {
    position: absolute;
    visibility: hidden;
    height: 40px;
    width: 40px;
    z-index: 99999;
}

#tick_below {
    padding-top: 260px;
}

#tick_public_visible {
    height: 2em;
    width: 2em;
}

#tick_send_type {
    font-size: 1.0em;
    min-width: 120px;
}

#top_bar_div {
    background-color: rgb(0,0,0);
    height: 30px;
    position: fixed;
    top: 0px;
    width: 100%;
    z-index: 9000;
}

#user_route_ticks {
    height: 100%;
    margin-bottom: 80px;
}

#welcome_logo {
    max-width: 200px;
    margin-left:auto;
    margin-right:auto;
}

